resources/ratelimiter_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rate-limiter
  namespace: operator-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rate-limiter
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rate-limiter
      annotations:
        sidecar.istio.io/inject: 'true'
        prometheus_io_port: '9102'
        prometheus_io_scheme: http
        prometheus_io_scrape: 'true'
    spec:
      volumes:
        - name: config
          configMap:
            name: rate-limiter
            defaultMode: 420
        - name: config-prom-exporter
          configMap:
            name: rate-limiter-statsd-exporter
            defaultMode: 420
      containers:
        - resources: { }
          terminationMessagePath: /dev/termination-log
          name: prom-exporter
          ports:
          - containerPort: 9125
            protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: config-statsd-exporter
              mountPath: /tmp
          terminationMessagePolicy: File
          image: 'prom/statsd-exporter:v0.18.0'
          args:
            - '--statsd.mapping-config=/tmp/statsd_mapping.yml'
            - '--log.level=info'
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: rate-limiter
          command:
            - sh
            - '-c'
            - /bin/startup.sh
          ports:
            - containerPort: 8081
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /home/user/src/runtime/data/ratelimit/config
          terminationMessagePolicy: File
          image: evil26r/rate-limit-rhel7
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
