resources/ratelimiter_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rate-limiter
  namespace: operator-test
spec:
  ports:
    - name: grpc-rate-limiter
      protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: rate-limiter
