resources/redis_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rate-limiter-redis
  namespace: operator-test
spec:
  ports:
    - name: rate-limiter-redis
      protocol: TCP
      port: 6379
      targetPort: 6379
  selector:
    app: rate-limiter-redis
